--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
-            googleApiKey:       "AIzaSyA3FQFrNr5W2OEVmuENqhb2MBB2JabdaOY",
+            fusionTableId:      "1un_nn_Sifqx_AfPnZAy4j9_T-OwJsDyF_VsGqA-T",
+            googleApiKey:       "AIzaSyDl1If8Bb1DMxm1gjs-ggDe9NmEGTs4x4U",
             locationColumn:     "geometry",
-            map_center:         [41.8781136, -87.66677856445312],
-            locationScope:      "chicago"
+            map_center:         [18.295031, 99.506051],
+            locationScope:      "Lampang"
           });
 
           var autocomplete = new google.maps.places.Autocomplete(document.getElementById('search_address'));
